fix build failed

--- a/content/lessons/04-delegates-events/02-events.mdx
+++ b/content/lessons/04-delegates-events/02-events.mdx
@@ -697,7 +697,7 @@ class Program
 ## Key Takeaways
 
 - **Events** are special delegates that can only be raised from within the class
-- Use **EventHandler** or **EventHandler<T>** for standard events
+- Use **EventHandler** or **EventHandler&lt;T&gt;** for standard events
 - Create **custom EventArgs** to pass data with events
 - Events implement the **observer pattern**
 - Subscribers can **add (+= )** and **remove (-=)** handlers
